change margin bottom

--- a/mydailytasks.html
+++ b/mydailytasks.html
@@ -1,63 +1,63 @@
 <html>
-
-<head>
+  <head>
     <title>My Daily Tasks</title>
-</head>
+  </head>
 
-<body style="background-color: rgb(235,236,237);">
-
-
-
-
+  <body style="background-color: rgb(235, 236, 237)">
     <h1
-        style="font-family: Arial, Helvetica, sans-serif;text-align: center;font-size: larger: 400px; color: rgb(14, 14, 20);">
-        My Daily Tasks </h1>
-    <div style="
+      style="font-family: Arial, Helvetica, sans-serif;text-align: center;font-size: larger: 400px; color: rgb(14, 14, 20);"
+    >
+      My Daily Tasks
+    </h1>
+    <div
+      style="
         text-align: left;
-        border-radius:10px;
+        border-radius: 15px;
         margin: auto;
-        padding:5px 25px;
+        padding: 5px 25px;
         width: 600px;
         font-size: larger;
         background-color: white;
-       ">
+      "
+    >
+      <h2 style="color: rgb(64, 39, 187)">To-Do-List</h2>
+      <hr style="border-color: rgb(250, 249, 249); border-style: solid" />
+      <input type="checkbox" />comeplete HTML/CSS project
 
+      <hr style="border-color: rgb(250, 249, 249); border-style: solid" />
 
-        <h2 style="color: rgb(64, 39, 187);">To-Do-List</h2>
-        <hr style=" border-color: rgb(250,249,249);
-        border-style: solid;">
-        <input type="checkbox">comeplete HTML/CSS project
+      <input type="checkbox" />Buy groceries
 
-        <hr style=" border-color: rgb(250,249,249);
-        border-style: solid;">
+      <hr style="border-color: rgb(250, 249, 249); border-style: solid" />
 
-        <input type="checkbox">Buy groceries
+      <input type="checkbox" />call mom
 
-        <hr style=" border-color: rgb(250,249,249);
-        border-style: solid;">
+      <hr style="border-color: rgb(250, 249, 249); border-style: solid" />
 
-        <input type="checkbox">call mom
-
-        <hr style=" border-color: rgb(250,249,249);
-        border-style: solid;">
-
-        <input type="checkbox">Exercise for 30 minutes <br><br>
-        <input type=" textbox" style="width: 500px; padding: 10px; border-radius: 5PX;
-    border-color: #00000038;" placeholder="Add new Task...">
-        <button style="border: none;
-    background-color: green;
-    color: aliceblue;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 10px;">Add Task </button>
-
+      <input type="checkbox" />Exercise for 30 minutes <br /><br />
+      <input
+        type=" textbox"
+        style="
+          width: 500px;
+          padding: 10px;
+          border-radius: 5px;
+          border-color: #00000038;
+          margin-bottom: 10px;
+        "
+        placeholder="Add new Task..."
+      />
+      <button
+        style="
+          border: none;
+          background-color: green;
+          color: aliceblue;
+          border-radius: 5px;
+          cursor: pointer;
+          padding: 10px;
+        "
+      >
+        Add Task
+      </button>
     </div>
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
